clang/test/BSC/Negative/Trait/GenericTrait/implicit_cast_trait2/implicit_cast_trait2.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

trait F<T> {
  int foo(This* this);
};

int get(trait F<int>* f) {
  return 1;
};

int main() {
  int a = 1;
  int b = get(&a); // expected-error {{expected a pointer type which has implemented 'trait F<int>', found 'int'}}
  return 0;
}
